2011-03-05  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] http/tests/plugins/post-url-file.html fails on GTK+
        https://bugs.webkit.org/show_bug.cgi?id=55826

        * http/tests/plugins/resources/dump-post.pl: Instead of printing out the "keywords" parameter,
        print out the POSTDATA parameter. Printing "keywords" did not seem to work on the version of
        Apache/Perl/CGI that existed on my machine. According to the Perl CGI module documentation
        using 'POSTDATA' is the correct way to print the entire POSTDATA.
        * platform/gtk/Skipped: Unskip the test which is now passing.

2011-03-05  Andrey Kosyakov  <caseq@chromium.org>

        Unreviewed. Another shot at fixing flakiness of extension-events.html.

        * inspector/extensions/extensions-events.html:

2011-03-05  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: chromium rebaseline, flaky test fix.

        * http/tests/inspector/debugger-test.js:
        * inspector/debugger/dom-breakpoints.html:
        * platform/chromium/inspector/console/console-uncaught-exception-expected.txt:

2011-03-05  Andrey Kosyakov  <caseq@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: inspector/extensions/extensions-events.html sometimes fails on Windows
        https://bugs.webkit.org/show_bug.cgi?id=54974

        Properly serialize test output to fix flakiness due to race with output during page reload.

        * inspector/extensions/extensions-events-expected.txt:
        * inspector/extensions/extensions-events.html:
        * platform/win/Skipped:

2011-03-05  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: introduce protocol test for ConsoleAgent.
        https://bugs.webkit.org/show_bug.cgi?id=55819

        * http/tests/inspector/protocol-test.js:
        (initialize_ProtocolTest.InspectorTest._dumpEvent):